# HeroBot

./: .dockerignore  Dockerfile  README.md  docker-run.sh  nginx.conf  run-prod.sh  start.sh
api/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
api/src/: index.ts
api/src/routes/: message.ts
api/src/websocket/: speechToText.ts
api/tts/: example.py  pyproject.toml
client/: app.json  cesconfig.json  metro.config.js  package-lock.json  package.json  tsconfig.json
client/app/: [hero].tsx  _layout.tsx  hero-chat.tsx  index.tsx  modal.tsx
client/app/(drawer)/: [hero].tsx  _layout.tsx  hero-chat.tsx  index.tsx
client/app/(drawer)/(tabs)/: index.tsx  two.tsx
client/components/: AnimatedHero.tsx  Button.tsx  ChatConent.tsx  Container.tsx  Conversation.tsx  Header.tsx  HeroAnimation.tsx  HeroChat.tsx  HeroImage.tsx  HeroList.tsx  HeroPage.tsx  HeroScreenHeader.tsx  HeroTile.tsx  Message.tsx  ScreenContent.tsx  UserInput.tsx
client/hooks/: useApiClient.ts  useAudio.ts  useConversationStore.ts  useStreamingMessageQuery.ts  useTranscriptionQuery.ts
client/lib/: heroAssets.ts  heroes.ts  queryClient.ts  store.ts
client/store/: store.ts
client/utils/: heroNavigation.ts
shared/: types.ts
