[project]
name = "tts"
version = "0.1.0"
description = ""
authors = [
    {name = "David Thomason",email = "911671+dtom90@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatterbox-tts (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
